--- a/src/app/audit.component.html
+++ b/src/app/audit.component.html
@@ -1,3 +1,4 @@
+
 <div class="row col" style="background-color:#ffffff">
   <div class="col-3">
     <a routerLink="/home">
@@ -29,23 +30,24 @@
 
   <div *ngIf="load" class="d-flex flex-row justify-content-end mt-1" style="margin-right: 25px;">
     <button class="btn btn-warning float-right mr-4" (click)="saveAction()">Action Plan</button>
-    <a class="btn btn-success float-right mr-4" href="assets/data/report.xlsx">Report</a>
+    <!--<a class="btn btn-success float-right mr-4" href="assets/data/report.xlsx">Report</a>-->
+    <a class="btn btn-success float-right mr-4" (click)="auditPrint()">Report</a>
     <button class="btn btn-success float-right" (click)="save()">Save & Exit</button>
   </div>
 
   <div class="d-flex flex-row justify-content-center">
     <form *ngIf="load" #basicInfoForm="ngForm" class="d-flex flex-row col-12 justify-content-center mt-4">
       <div class=" col-12 mb-4" style="border: 1px solid #17a2b8;border-radius: 10px;">
-        <p-accordion>
-          <p-accordionTab *ngFor="let sec of mySections" header='{{ sec.name + "   "  + getTotal(sec.id) }}'>
-            <div class="row">
+        <p-accordion [multiple]="true">
+          <p-accordionTab *ngFor="let sec of mySections" header='{{ sec.name + "      ("  + getTotal(sec.id) +")" }}'>
+            <div class="row mt-2">
               <div *ngFor="let myQes of sec.questions" class="col-4 mb-3">
                 <label class="font-weight-bold" style="color:#bf6a31">
                   {{ myQes.question }} <i class="fa fa-info-circle" tooltipPosition="top" pTooltip='{{ myQes.description }}'></i>
                 </label>
                 <select id="dropanswers" #dropanswers="ngModel" class="form-control" required name='{{ myQes.id + "qes" }}' [(ngModel)]="myQes.currentAnswer">
                   <option [ngValue]="undefined" selected>--Select--</option>
-                  <option *ngFor="let ans of myQes.answer" [value]="ans">
+                  <option *ngFor="let ans of myQes.answer" [ngValue]="ans">
                     {{ ans }}
                   </option>
                 </select>
@@ -61,6 +63,12 @@
     </form>
   </div>
 
+  <div *ngIf="!load" class="d-flex flex-row justify-content-center mt-4">
+    <div class="spinner-border" style="width: 3rem; height: 3rem;">
+      <span class="sr-only">Loading...</span>
+    </div>
+  </div>
+  
 
 </div>
 
